# manim-pptx

./: .gitignore  LICENSE  README.md  pyproject.toml
src/manim_pptx/: __init__.py  pptxscene.py  template.pptx
tests/: test_manim_pptx.py
