[tool.poetry]
name = "manim-pptx"
version = "0.1.5"
description = ""
authors = ["RythenGlyth <rythenglyth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.0"
manim = "*"
python-pptx = "*"
lxml = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
